--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "Anthony Fu<https://github.com/antfu>",
   "license": "MIT",
   "scripts": {
+    "zhlint-fix": "zhlint 'packages/guide/*.md' --fix",
     "build": "nr update && esno scripts/build-run.ts",
     "build:redirects": "esno scripts/redirects.ts",
     "build:rollup": "NODE_OPTIONS=\"--max-old-space-size=6144\" rollup --config=rollup.config.ts --configPlugin=rollup-plugin-esbuild",
@@ -108,7 +109,8 @@
     "vitepress": "^1.0.0-rc.44",
     "vitest": "^1.3.0",
     "vue": "^3.4.19",
-    "vue2": "npm:vue@^2.7.14"
+    "vue2": "npm:vue@^2.7.14",
+    "zhlint": "^0.8.1"
   },
   "pnpm": {
     "neverBuiltDependencies": [
