build: add the zeabur config

--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
   "author": "Anthony Fu<https://github.com/antfu>",
   "license": "MIT",
   "scripts": {
-    "zhlint-fix": "zhlint 'packages/**/*.md' --fix",
+    "zhlint": "zhlint 'packages/**/*.md' --fix",
     "build": "nr update && esno scripts/build-run.ts",
     "build:redirects": "esno scripts/redirects.ts",
     "build:rollup": "NODE_OPTIONS=\"--max-old-space-size=6144\" rollup --config=rollup.config.ts --configPlugin=rollup-plugin-esbuild",
     "build:types": "tsc --emitDeclarationOnly && nr types:fix",
     "clean": "rimraf --glob dist types \"packages/*/dist\"",
     "dev": "nr update && nr docs",
-    "docs": "vue-demi-switch 3 && vitepress dev packages --open",
+    "docs": "vue-demi-switch 3 && vitepress dev packages",
     "docs:build": "nr update:full && vitepress build packages && nr build:redirects",
     "docs:serve": "vitepress serve packages",
     "lint": "eslint --cache .",
