--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
   "author": "Anthony Fu<https://github.com/antfu>",
   "license": "MIT",
   "scripts": {
-    "zhlint": "zhlint 'packages/**/*.md' --fix",
     "build": "nr update && esno scripts/build-run.ts",
     "build:redirects": "esno scripts/redirects.ts",
     "build:rollup": "NODE_OPTIONS=\"--max-old-space-size=6144\" rollup --config=rollup.config.ts --configPlugin=rollup-plugin-esbuild",
     "build:types": "tsc --emitDeclarationOnly && nr types:fix",
     "clean": "rimraf --glob dist types \"packages/*/dist\"",
     "dev": "nr update && nr docs",
-    "docs": "vue-demi-switch 3 && vitepress dev packages",
+    "docs": "vue-demi-switch 3 && vitepress dev packages --open",
     "docs:build": "nr update:full && vitepress build packages && nr build:redirects",
     "docs:serve": "vitepress serve packages",
     "lint": "eslint --cache .",
@@ -110,8 +109,7 @@
     "vitepress": "^1.3.2",
     "vitest": "^2.0.5",
     "vue": "^3.4.38",
-    "vue2": "npm:vue@^2.7.14",
-    "zhlint": "^0.8.1"
+    "vue2": "npm:vue@^2.7.14"
   },
   "pnpm": {
     "neverBuiltDependencies": [
