--- a/packages/integrations/package.json
+++ b/packages/integrations/package.json
@@ -2,7 +2,7 @@
   "name": "@vueuse/integrations",
   "type": "module",
   "version": "14.1.0",
-  "description": "实用程序库的集成包装器",
+  "description": "Integration wrappers for utility libraries",
   "author": "Anthony Fu <https://github.com/antfu>",
   "license": "MIT",
   "funding": "https://github.com/sponsors/antfu",
