--- a/packages/rxjs/package.json
+++ b/packages/rxjs/package.json
@@ -2,7 +2,7 @@
   "name": "@vueuse/rxjs",
   "type": "module",
   "version": "14.1.0",
-  "description": "在 Vue 中启用 RxJS 反应函数",
+  "description": "Enables RxJS reactive functions in Vue",
   "author": "Anthony Fu <https://github.com/antfu>",
   "license": "MIT",
   "funding": "https://github.com/sponsors/antfu",
